--- a/index.html
+++ b/index.html
@@ -2,8 +2,34 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8">
-        <title><Project-4></title>
+        <title>Project-4</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+        <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Hammersmith+One&family=Playfair+Display:ital,wght@1,600&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
-         
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
+    <body>
+        <header class="splash">
+            <nav class="navigation">
+                <div class="name">
+                    <h3 class="studio-name"><a href="#">Golden</a></h3>
+                </div>
+                <div class="main-navigation">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Service</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="spalsh-inner">
+                <h3 class="splash-subtitle">Welcome To Our Studio!</h3>
+                <h1 class="splash-title">It's nice to meet you<h1>
+                <a href="#" class="btn">Tell me more</a>
+            </div>    
+        </header>
+    </body>
 </html>
