--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Hammersmith+One&family=Playfair+Display:ital,wght@1,600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -25,11 +25,38 @@
                     </ul>
                 </div>
             </nav>
-            <div class="spalsh-inner">
+            <div class="splash-inner">
                 <h3 class="splash-subtitle">Welcome To Our Studio!</h3>
                 <h1 class="splash-title">It's nice to meet you<h1>
                 <a href="#" class="btn">Tell me more</a>
             </div>    
         </header>
+        <section class="services">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h1>Services</h1>
+                        <p><span>Excepteur sint occaecat cupidatat non proident.</span></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="icon"><a href="#"><i class="fas fa-shopping-basket"></i></a></p>
+                        <h3 class="service-title">E-commerce</h3>
+                        <p class="service-text">Dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem sed quia.</p>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <p class="icon"><a href="#"><i class="fas fa-laptop-code"></i></a></p>
+                        <h3 class="service-title">Responsive Web</h3>
+                        <p class="service-text">Aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <p class="icon"><a href="#"><i class="fas fa-unlock-alt"></i></a></p>
+                        <h3 class="service-title">Web Security</h3>
+                        <p class="service-text">Quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam sed quia ad minima.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
-</html>
+</html> 
