Add protfolio section, footer, media

--- a/index.html
+++ b/index.html
@@ -58,5 +58,99 @@
                 </div>
             </div>
         </section>
+        <section class="portfolio">
+            <div class="container">
+                <div class="row pt-5">
+                    <div class="col-12">
+                        <h1 class="portfolio-title">Our portfolio</h1>
+                        <p class="one">Quis autem vel eum iure reprehenderit.</p>
+                    </div>
+                </div>
+                <div class="row py-4">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="https://c.pxhere.com/images/aa/4f/1703c7d0e2c50f2df5d03a19cd56-1449065.jpg!s">
+                            </div>
+                            <div class="card-body">
+                                <h2 class"portfolio-subtitle">Electronics</h2>
+                                <p class="one">Branding</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="https://images.pexels.com/photos/688668/pexels-photo-688668.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                            </div>
+                            <div class="card-body">
+                                <h2 class"portfolio-subtitle">Posters</h2>
+                                <p class="one">Print design</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="https://images.pexels.com/photos/1007025/pexels-photo-1007025.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                            </div>
+                            <div class="card-body">
+                                <h2 class"portfolio-subtitle">Stationary</h2>
+                                <p class="one">Print design</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row pb-5">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="https://images.pexels.com/photos/1925099/pexels-photo-1925099.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                            </div>
+                            <div class="card-body">
+                                <h2 class"portfolio-subtitle">Vinyl Record</h2>
+                                <p class="one">Product Mock-up</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="https://images.pexels.com/photos/114907/pexels-photo-114907.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                            </div>
+                            <div class="card-body">
+                                <h2 class"portfolio-subtitle">Template</h2>
+                                <p class="one">Web Design</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="https://images.pexels.com/photos/1268124/pexels-photo-1268124.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                            </div>
+                            <div class="card-body">
+                                <h2 class"portfolio-subtitle">Burned Logo</h2>
+                                <p class="one">Branding</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+    <footer class="page-footer">
+        <div class="container">
+            <div class="copyright">
+                <p>&copy; Copyright 2014 FreebiesXpress.com</p>
+            </div>
+                <ul>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                    <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                </ul>
+        </div>
+    </footer>
     </body>
 </html> 
